Fix CSS formatting by reordering display property in header.hidden for improved readability.

--- a/main.css
+++ b/main.css
@@ -781,7 +781,8 @@ header.hidden {
     position: relative;
     overflow-x: scroll;
     border: 1px solid red;
-    display: flex; */
+   */
+   display: flex; 
   }
 
   .header-navs {
